# medme-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  about.html  blog.html  changelog.html  index.html
.claude/agents/: blog-writer.md
.claude/skills/blog/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-viewer.yml  desktop-build.yml  fuzz.yml  mobile.yml  scorecard.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  dicom_subprocess.rs  dto.rs  inbox.rs  lib.rs  main.rs  vault_loc.rs
apps/desktop/src-tauri/tests/: dicom_subprocess_roundtrip.rs
apps/desktop/src/components/: AboutView.tsx  AuditView.tsx  DicomViewer.tsx  DocumentView.tsx  ErrorBoundary.tsx  ImportView.tsx  SearchView.tsx  SettingsView.tsx  Sidebar.tsx  Timeline.tsx
apps/mobile/: .gitignore  ANDROID_SETUP.md  package.json  pnpm-lock.yaml
apps/mobile/src/: App.css  App.tsx  api.ts  icons.tsx  types.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/.cargo/: config.toml
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: commands.rs  dto.rs  icloud.rs  lib.rs  mlkit.rs  vision.rs
apps/mobile_flutter/: CLAUDE.md  analysis_options.yaml  pubspec.yaml
apps/mobile_flutter/android/app/: build.gradle.kts
apps/mobile_flutter/android/app/src/main/: AndroidManifest.xml
apps/mobile_flutter/android/app/src/main/kotlin/com/medme/mobile/: MainActivity.kt
apps/mobile_flutter/android/app/src/main/kotlin/com/medme/mobile_flutter/: MainActivity.kt
apps/mobile_flutter/integration_test/: app_test.dart  archive_test.dart  export_test.dart  import_export_test.dart  simple_test.dart
apps/mobile_flutter/ios/: Podfile
apps/mobile_flutter/ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
apps/mobile_flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile_flutter/lib/: app_mode.dart  ephemeral_session.dart  icloud_bridge.dart  import_flow.dart  main.dart  ocr_bridge.dart  profile_manager.dart  report_content.dart  review_state.dart  theme.dart  vault_boot.dart  vault_events.dart
apps/mobile_flutter/lib/screens/: archive_screen.dart  document_detail.dart  export_screen.dart  import_export_screen.dart  import_helpers.dart  mode_picker_screen.dart  qr_share_screen.dart  settings_screen.dart
apps/mobile_flutter/lib/screens/doctor/: doctor_share_result_dialog.dart  proxy_document_detail.dart  proxy_intake_flow.dart  proxy_summary_card.dart
apps/mobile_flutter/lib/screens/proxy/: consent_screen.dart  proxy_intake_flow.dart
apps/mobile_flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/mobile_flutter/lib/src/rust/api/: dto.dart  ephemeral.dart  simple.dart  vault.dart  vault_ephemeral.dart
apps/mobile_flutter/lib/widgets/: report_content.dart  share_result_dialog.dart
apps/mobile_flutter/rust/: Cargo.toml
apps/mobile_flutter/rust/src/: frb_generated.rs  icloud.rs  lib.rs
apps/mobile_flutter/rust/src/api/: dto.rs  ephemeral.rs  mod.rs  simple.rs  vault.rs  vault_ephemeral.rs
apps/mobile_flutter/rust_builder/: pubspec.yaml
apps/mobile_flutter/rust_builder/android/: JNILIBS_NOTES.md  build.gradle  settings.gradle
apps/mobile_flutter/rust_builder/android/src/main/: AndroidManifest.xml
apps/mobile_flutter/rust_builder/ios/: rust_lib_mobile_flutter.podspec
apps/mobile_flutter/rust_builder/linux/: CMakeLists.txt
apps/mobile_flutter/rust_builder/macos/: rust_lib_mobile_flutter.podspec
apps/mobile_flutter/rust_builder/windows/: CMakeLists.txt
apps/mobile_flutter/test/: report_content_test.dart
assets/brand/: README.md
docs/: 000_Vision.md  001_PRD.md  002_Architecture.md  003_Core_Data_Model.md  004_Import_Pipeline.md  005_AI_Principles.md  006_Plugin_SDK.md  007_UI_Guidelines.md  010_Imaging_DICOM.md  011_Storage_Sync.md  020_Flutter_Mobile_Rewrite.md  030_Clinical_Handoff.md
docs/ADR/: 0001-language-cn-en.md  0002-ocr-backend.md  0003-content-addressable-storage.md  0004-core-model-independence.md  0005-ocr-per-platform-native.md  0006-ios-ocr-pp-ocrv5.md
docs/log/: 2026-07-18-mobile-audit-extraction-strategy.md  2026-07-18-qr-share-security-and-community-prep.md  2026-07-22-ios-pp-ocr-scanner-linker.md
docs/superpowers/plans/: 2026-07-06-medme-v0.1-foundation.md
docs/superpowers/specs/: 2026-07-10-terminology-normalization-layer-design.md
tools/: build_demo_page.py
viewer/: index.html
web/hosted-viewer/: index.html
