[workspace]
resolver = "2"
members = ["packages/core-model", "packages/parser", "packages/terminology", "packages/pipeline", "packages/ocr", "packages/dicom", "packages/share", "apps/cli", "apps/desktop/src-tauri"]
# Flutter 移动端(P1+)的 FRB rust crate 自成一体、由 cargokit 为 iOS/安卓单独构建,
# 不进桌面 workspace(否则 host `cargo build --workspace` 会去编它)。它经 path 依赖
# 复用 packages/* 数据核。
exclude = ["apps/mobile_flutter/rust"]

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
jieba-rs = "0.7"
pdf-extract = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
regex = "1"
lopdf = "0.43"

[profile.release]
# Strip symbols from release binaries/.so's — the main lever for a slim
# mobile release build (debug builds were 400MB+ unstripped). Defaults for
# everything else (opt-level 3, no LTO) are sane; not over-tuning further.
strip = true
