[package]
name = "medme-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "medme"
path = "src/main.rs"

[dependencies]
core-model = { path = "../../packages/core-model" }
pipeline = { path = "../../packages/pipeline" }
# Re-enable oar-ocr (feature unification with pipeline's default-features-off
# dep) so the CLI keeps real local OCR, unchanged from before the Android gate.
ocr = { path = "../../packages/ocr" }
clap.workspace = true
anyhow.workspace = true
