[package]
name = "medme-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-model = { path = "../../../packages/core-model" }
pipeline = { path = "../../../packages/pipeline" }
dicom = { path = "../../../packages/dicom" }
# Re-enable oar-ocr (feature unification with pipeline's default-features-off
# dep) so desktop keeps real local OCR, unchanged from before the Android gate.
ocr = { path = "../../../packages/ocr" }
medme-share = { path = "../../../packages/share" }
notify = "8.2.0"
tauri-plugin-dialog = "2.7.1"
chrono.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

# Custom-harness integration test for the isolated DICOM decode subprocess: the
# test binary re-execs itself as the `--decode-dicom` child, which libtest's
# default harness can't do (it would parse the flag as a test filter).
[[test]]
name = "dicom_subprocess_roundtrip"
harness = false

