[package]
name = "medme-mobile"
version = "0.1.0"
description = "MedMe 医我 — 手机端(采集 + 随身健康档案 + 加密分享)"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (see desktop).
# `staticlib`/`cdylib` are required for the iOS/Android mobile targets.
name = "mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Shared platform-independent crates, reused verbatim from the desktop app.
core-model = { path = "../../../packages/core-model" }
pipeline = { path = "../../../packages/pipeline" }
parser = { path = "../../../packages/parser" }
# DICOM: default-features off here so the Android build does NOT compile the
# vendored C/C++ pixel codecs (OpenJPEG/CharLS) — they can't cross-compile via
# cmake for the Android NDK, and mobile does no DICOM pixel viewing. iOS keeps
# them (re-enabled in the target block below) so iOS behavior is unchanged.
dicom = { path = "../../../packages/dicom", default-features = false }
# OCR: default-features off here (no `engine`, no `auto-download`) so the plain
# host build stays lean. The per-OS target blocks below re-enable the engine for
# the real devices: iOS and Android both compile/link oar-ocr + ONNX Runtime.
# ONNX Runtime is fetched as a *static* prebuilt at build time (per target,
# incl. aarch64-linux-android) and linked into libmobile_lib.so — nothing is
# downloaded at run time.
ocr = { path = "../../../packages/ocr", default-features = false }
medme-share = { path = "../../../packages/share" }
chrono.workspace = true
anyhow.workspace = true

# iOS keeps the full DICOM pixel codecs (unchanged from before this split):
# Apple targets cross-compile the C/C++ libs fine. Only Android drops them.
# Same for OCR: iOS keeps oar-ocr/ONNX Runtime for scanned-PDF OCR; Android
# drops it (doesn't work there, and it's the bulk of the debug .so's size).
[target.'cfg(target_os = "ios")'.dependencies]
dicom = { path = "../../../packages/dicom", features = ["codecs"] }
ocr = { path = "../../../packages/ocr", features = ["engine"] }

# Android: enable the OCR `engine` but NOT `auto-download`. oar-ocr + ONNX
# Runtime are linked in (runtime fetched statically at build time), while the
# PP-OCRv5 *model* files are shipped in the APK (gen/android/.../assets/oar/)
# and extracted to app storage at startup — the Android sandbox has no writable
# home for auto-download. `default-features = false` keeps `auto-download` off
# (it's in `ocr`'s default set). Images/scanned-PDFs then OCR through the same
# `pipeline::ingest` path desktop uses. DICOM pixel codecs stay OFF (they can't
# cross-compile via cmake for the NDK, and mobile does no pixel viewing).
[target.'cfg(target_os = "android")'.dependencies]
ocr = { path = "../../../packages/ocr", default-features = false, features = [
    "engine",
] }

[dev-dependencies]
tempfile = { workspace = true }
