[package]
name = "medme-mobile"
version = "0.1.0"
description = "MedMe 医我 — 手机端(采集 + 随身健康档案 + 加密分享)"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (see desktop).
# `staticlib`/`cdylib` are required for the iOS/Android mobile targets.
name = "mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Shared platform-independent crates, reused verbatim from the desktop app.
core-model = { path = "../../../packages/core-model" }
pipeline = { path = "../../../packages/pipeline" }
parser = { path = "../../../packages/parser" }
# DICOM: default-features off for ALL mobile targets (iOS + Android) so the
# vendored C/C++ pixel codecs (OpenJPEG for JPEG 2000, CharLS for JPEG-LS) are
# never compiled or linked into a mobile build. Rationale:
#   * Mobile never *views* DICOM pixels (capture + records + share only), so
#     dropping the codecs is zero functional loss — the DICOM path degrades to
#     metadata-only / "unsupported preview" via `dicom`'s existing pure-Rust
#     fallback (`parse_meta` + `render_png`/`decode_frame` still compile, only
#     J2K/JPEG-LS transfer syntaxes become unsupported at runtime).
#   * Security (advisory GHSA-24px): those C/C++ decoders are a memory-corruption
#     RCE surface. Not linking them removes the surface from mobile entirely.
#   * Android additionally can't cross-compile them (cmake-rs + CMake 4.x vs the
#     NDK); iOS could, but has no reason to carry the surface — and it also
#     shrinks the iOS binary.
# There is intentionally NO per-target re-enable of `codecs` below.
dicom = { path = "../../../packages/dicom", default-features = false }
# OCR: default-features off here (no `engine`, no `auto-download`) so the plain
# host build stays lean. The per-OS target blocks below re-enable the engine for
# the real devices: iOS and Android both compile/link oar-ocr + ONNX Runtime.
# ONNX Runtime is fetched as a *static* prebuilt at build time (per target,
# incl. aarch64-linux-android) and linked into libmobile_lib.so — nothing is
# downloaded at run time.
ocr = { path = "../../../packages/ocr", default-features = false }
medme-share = { path = "../../../packages/share" }
chrono.workspace = true
anyhow.workspace = true

# iOS: OCR keeps oar-ocr/ONNX Runtime for scanned-PDF OCR (Apple targets
# cross-compile it fine; Android drops it, doing OCR via shipped model files).
# NOTE: iOS deliberately does NOT re-enable the DICOM `codecs` feature anymore
# (it used to). Mobile never views DICOM pixels, so the vendored C/C++ JPEG2000
# /JPEG-LS decoders — a memory-corruption RCE surface (GHSA-24px) — are no
# longer linked into the iOS binary. See the base `dicom` dep above.
[target.'cfg(target_os = "ios")'.dependencies]
ocr = { path = "../../../packages/ocr", features = ["engine"] }

# Android: enable the OCR `engine` but NOT `auto-download`. oar-ocr + ONNX
# Runtime are linked in (runtime fetched statically at build time), while the
# PP-OCRv5 *model* files are shipped in the APK (gen/android/.../assets/oar/)
# and extracted to app storage at startup — the Android sandbox has no writable
# home for auto-download. `default-features = false` keeps `auto-download` off
# (it's in `ocr`'s default set). Images/scanned-PDFs then OCR through the same
# `pipeline::ingest` path desktop uses. DICOM pixel codecs stay OFF (they can't
# cross-compile via cmake for the NDK, and mobile does no pixel viewing).
[target.'cfg(target_os = "android")'.dependencies]
ocr = { path = "../../../packages/ocr", default-features = false, features = [
    "engine",
] }

[dev-dependencies]
tempfile = { workspace = true }
