[package]
name = "rust_lib_mobile_flutter"
version = "0.1.0"
edition = "2021"

# 这个 crate 自成一体、由 cargokit 单独构建,不属于任何上层 workspace(见根
# Cargo.toml 的 `exclude`)。显式声明一个空 `[workspace]` 表把这一点钉死——否则
# 当本目录被嵌套在另一个已存在的 workspace 内时(例如本仓库用 git worktree 做
# 并行 agent 隔离,worktree checkout 落在主仓库工作树的 `.claude/worktrees/`
# 下面,自身又是一个完整 workspace),`cargo check` 会在向上找 workspace 根时
# 越过最近的 `[workspace]` 一路找到最外层仓库根,报
# "current package believes it's in a workspace when it's not"。空
# `[workspace]` 表是 Cargo 自己给出的推荐解法,彻底切断向上搜索。
[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
chrono = "0.4"
# 随应用二进制打包示例数据集(见 api::vault::DEMO_DATA / load_demo_data)。
include_dir = "0.7"
# 复用现有 Rust 数据核(与桌面同一保险箱格式 → 同步互通)。
core-model = { path = "../../../packages/core-model" }
pipeline = { path = "../../../packages/pipeline" }
parser = { path = "../../../packages/parser" }
medme-share = { path = "../../../packages/share" }
# DICOM:iOS + 安卓两端都关掉 `codecs`(C/C++ JPEG2000/JPEG-LS 解码器),与 Tauri
# 移动端 `apps/mobile/src-tauri/Cargo.toml` 的取舍一致——移动端不看 DICOM 像素
# 精细阅片,免去这处内存破坏型 RCE 面(GHSA-24px),`parse_meta`/`render_png` 仍
# 可用(仅不支持的压缩传输语法会降级)。故意不做任何 per-target 的重新启用。
dicom = { path = "../../../packages/dicom", default-features = false }

# **测试版,feat/android-pp-ocr 分支 —— ADR 0005 尚未 supersede。** iOS 侧已合入
# main(见 ADR 0006);本分支把安卓也接到同一 PP-OCRv5 引擎(用户反馈安卓 ML Kit
# 识别质量不够,拍板换成和 iOS 同引擎同模型)。只在 iOS/安卓 target 上链接
# (`cfg(any(target_os = "ios", target_os = "android"))`,而非 Cargo feature),
# 桌面/CLI 构建完全不受影响、不多链一个字节的 onnxruntime。`default-features =
# false` + 只留 `engine` 关掉 `auto-download`(离线,模型随 app 打包,见
# `api::vault` 里 PP-OCR 相关代码的模型落盘逻辑),不然沙盒里没有可写的
# `$OAR_HOME` 首启会直接失败。见 `packages/ocr/Cargo.toml` 对 `engine`/
# `auto-download` 两个 feature 的说明。安卓侧 `ort`(经 `oar-ocr` 的
# `download-binaries`)在 build 时为 `aarch64-linux-android` 下载预编译静态
# onnxruntime(`libonnxruntime.a`,~108MB 未剥离)并静态链接,另外动态链接
# NDK 的 `libc++_shared.so`(C++ 标准库,NDK 推荐做法——多个 .so 共享同一份
# libc++ 而非各自静态内嵌一份;ML Kit 自己的
# `libmlkit_google_ocr_pipeline.so` 也是这个模式)。cargokit 的 Gradle 插件只
# 把我们自己编译出的 `lib*.so` 拷进 APK 的 jniLibs(见
# `rust_builder/cargokit/build_tool/lib/src/artifacts_provider.dart`
# `getArtifactNames`),不会带上这个 NDK 系统库,所以**直接把它提交进
# `rust_builder/android/src/main/jniLibs/arm64-v8a/libc++_shared.so`**(与
# cargokit 动态写入的 `debug`/`release` sourceSet 是同一模块、同一
# `jniLibs` 概念的另一个来源,AGP 按 variant 汇总所有 sourceSet 的
# jniLibs——main 的静态目录 + buildType 的动态目录都会进最终 APK;这一步
# 没跑整包 build 验证,武断信的是 AGP 文档化的 sourceSet 合并行为,外加
# 本仓库已有的 ML Kit 那份 `.so` 正是靠同一条 jniLibs→AAR→APK 流水线在真机
# 上跑通的实证)。从 build 实际用的 NDK
# (`~/Library/Android/sdk/ndk/28.2.13676358`,Flutter 3.44.6 默认版本,CI 亦然)
# 的 `toolchains/llvm/prebuilt/<host>/sysroot/usr/lib/aarch64-linux-android/
# libc++_shared.so` 拷出、`llvm-strip --strip-unneeded` 剥掉调试符号后
# 9.2MB→1.25MB(保留 `.dynsym` 2502 项,SONAME 仍是 `libc++_shared.so`,
# 运行时按 SONAME 匹配,不依赖文件名之外的东西)。只提交了 arm64-v8a 这一个
# ABI(唯一验证过交叉编译的 target);armeabi-v7a/x86_64 需要时照此办法再加。
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
ocr = { path = "../../../packages/ocr", default-features = false, features = ["engine"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
