[package]
name = "rust_lib_mobile_flutter"
version = "0.1.0"
edition = "2021"

# 这个 crate 自成一体、由 cargokit 单独构建,不属于任何上层 workspace(见根
# Cargo.toml 的 `exclude`)。显式声明一个空 `[workspace]` 表把这一点钉死——否则
# 当本目录被嵌套在另一个已存在的 workspace 内时(例如本仓库用 git worktree 做
# 并行 agent 隔离,worktree checkout 落在主仓库工作树的 `.claude/worktrees/`
# 下面,自身又是一个完整 workspace),`cargo check` 会在向上找 workspace 根时
# 越过最近的 `[workspace]` 一路找到最外层仓库根,报
# "current package believes it's in a workspace when it's not"。空
# `[workspace]` 表是 Cargo 自己给出的推荐解法,彻底切断向上搜索。
[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
chrono = "0.4"
# `api::vault_ephemeral::ephemeral_summary` 把 `parser::assemble_summary` 的
# `serde_json::Value` 映射成定型 FRB DTO(`ProxySummaryDto`),需要直接命名
# `serde_json::Value`——`parser`/`medme-share` 都已传递依赖它,但 Rust 2018+
# 要求能 `use` 的 crate 是直接依赖,故显式声明(版本与根 workspace `Cargo.toml`
# 的 `serde_json = "1"` 一致)。
serde_json = "1"
# 随应用二进制打包示例数据集(见 api::vault::DEMO_DATA / load_demo_data)。
include_dir = "0.7"
# 复用现有 Rust 数据核(与桌面同一保险箱格式 → 同步互通)。
core-model = { path = "../../../packages/core-model" }
pipeline = { path = "../../../packages/pipeline" }
parser = { path = "../../../packages/parser" }
medme-share = { path = "../../../packages/share" }
# DICOM:iOS + 安卓两端都关掉 `codecs`(C/C++ JPEG2000/JPEG-LS 解码器),与 Tauri
# 移动端 `apps/mobile/src-tauri/Cargo.toml` 的取舍一致——移动端不看 DICOM 像素
# 精细阅片,免去这处内存破坏型 RCE 面(GHSA-24px),`parse_meta`/`render_png` 仍
# 可用(仅不支持的压缩传输语法会降级)。故意不做任何 per-target 的重新启用。
dicom = { path = "../../../packages/dicom", default-features = false }

# **测试版,feat/ios-pp-ocr-test 分支专用 —— ADR 0005 尚未 supersede。** 只在 iOS
# target 上链接(`cfg(target_os = "ios")`,而非 Cargo feature),安卓构建完全不受
# 影响、不多链一个字节的 onnxruntime。`default-features = false` + 只留 `engine`
# 关掉 `auto-download`(离线,模型随 app 打包,见 `api::vault` 里 PP-OCR 相关代码
# 的模型落盘逻辑),不然沙盒里没有可写的 `$OAR_HOME` 首启会直接失败。见
# `packages/ocr/Cargo.toml` 对 `engine`/`auto-download` 两个 feature 的说明。
[target.'cfg(target_os = "ios")'.dependencies]
ocr = { path = "../../../packages/ocr", default-features = false, features = ["engine"] }

[dev-dependencies]
# `api::vault_ephemeral` 的单测用临时目录(会话根/沙盒 `cache_dir`)。
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
